# agentic-linear

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.vps.yml  docker-compose.yml  project.md  pyproject.toml  railway.toml
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: agent-status-badge.tsx  card.tsx  nav.tsx
dashboard/src/hooks/: use-agents.ts
dashboard/src/lib/: api.ts  utils.ts
docs/superpowers/plans/: 2026-03-27-discord-conversational-agents.md
docs/superpowers/specs/: 2026-03-27-discord-conversational-agents-design.md
migrations/: 001_create_agent_tasks.sql
scripts/: setup_linear.py  test_e2e.py
services/gateway/: agents.py  main.py  router.py
services/ops/: main.py
services/planning/: main.py
services/verify/: main.py
services/worker/: main.py
shared/: agent_base.py  agent_config.py  agent_state.py  claude_client.py  config.py  conversation_store.py  database.py  discord_notifier.py  dispatcher.py  dream.py  github_client.py  linear_client.py  metrics.py  models.py  project_context.py  queue.py  redis_queue.py  soul_manager.py  tools.py  vercel_client.py  worker.py
shared/agent_config/: claude.md
tests/: test_agent_base.py  test_agent_config.py  test_conversation_store.py  test_dispatcher.py  test_dream.py  test_gatherer.py  test_integration_conversational.py  test_intent_router.py  test_listener.py  test_metrics.py  test_project_context.py  test_queue.py  test_router.py  test_soul_manager.py  test_webhook_signature.py
(+54 files in other folders)
